instruction number dto